bitfield/tests/22-multiple-bits-attributes-on-same-enum.stderr
error: multiple `bits` attributes on the same enum
 --> tests/22-multiple-bits-attributes-on-same-enum.rs:7:1
  |
7 | #[bits = 2]
  | ^^^^^^^^^^^
